@@ -10,10 +10,10 @@ function foo(arr, index) {
 noInline(foo);
 
 const arr = new Array(10).fill({});
-for (let i = 0; i < 1e6; i++) {
+for (let i = 0; i < 1e5; i++) {
     foo(arr, i % arr.length);
 }
-for (let i = 0; i < 1e6; i++) {
+for (let i = 0; i < 1e5; i++) {
     foo(arr, i % arr.length);
     if (!(i % arr.length))
         foo(arr, -1);
